--- a/plugin/reservation/Resources/translations/reservation.fr.json
+++ b/plugin/reservation/Resources/translations/reservation.fr.json
@@ -72,6 +72,7 @@
     "confirm_resource_deletion_title": "Suppression d'une ressource",
     "confirm_resource_type_deletion_content": "Êtes-vous sûr de vouloir supprimer ce type de ressources ? Cette action supprimera toutes les ressources appartenant à ce type de ressources ainsi que les éventuelles réservations en cours de chaque ressource.",
     "confirm_resource_type_deletion_title": "Suppression d'un type de ressources",
+    "create_a_resource": "Créer une resource",
     "delete_resource": "Supprimer la ressource",
     "delete_resource_type": "Supprimer ce type de ressources",
     "error.empty_input": "Le champs ne doit pas être vide.",
@@ -119,5 +120,6 @@
     "picker.select_decade": "Sélectionnez une décade",
     "picker.select_month": "Sélectionnez un mois",
     "picker.select_year": "Sélectionnez une année",
+    "quantity": "Quantité",
     "reservation": "Réservation"
 }
