Adds info messages for resource rights

--- a/plugin/reservation/Resources/translations/reservation.en.json
+++ b/plugin/reservation/Resources/translations/reservation.en.json
@@ -105,6 +105,7 @@
     "modify_resource_type_name": "Change name.",
     "no_resources_in_resource_type": "There are no resources in this category.",
     "no_resources_type_yet": "There are no resources to reserve yet.",
+    "no_rights_configured": "There are no configured rights.",
     "picker.close": "Close",
     "picker.go_to_today": "Today",
     "picker.locale": "fr",
